syntax="proto3";

import "google/protobuf/timestamp.proto";

package todo;

service TodoService {
  rpc CreateTodo (CreateTodoDto) returns (Todo) {}
  rpc FindOneTodo (FindTodoByIdDto) returns (Todo) {}
  rpc UpdateTodo (UpdateTodoDto) returns (Todo) {}
  rpc QueryTodos (stream PaginationDto) returns (stream Todos) {}
}

message PaginationDto {
  int32 page = 1;
  int32 skip = 2;
  int32 limit = 3;
}

message UpdateTodoDto {
  string id = 1;
  string title = 2;
  string description = 3;
}

message FindTodoByIdDto {
  string id = 1;
}

message Empty {};

message Todos {
  repeated Todo todos = 1;
}

message CreateTodoDto {
  string userId = 1;
  string title = 2;
  string description = 3;
}

message Todo {
  string id = 1;
  string userId = 2;
  string title = 3;
  string description = 4;
  google.protobuf.Timestamp createdAt = 5;
  google.protobuf.Timestamp updatedAt = 6;
  google.protobuf.Timestamp deletedAt = 7;
}


